--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
 		"build": "npx tsc",
 		"build-frontend": "npm run --prefix ../frontend build && rm -Rf dist && mv ../frontend/dist .",
 		"dev": "concurrently \"nodemon index.js\" \"npx tsc --watch\"",
+		"start": "node dist/index.js",
 		"lint": "eslint .",
 		"format": "prettier --write .",
 		"test": "echo \"Error: no test specified\" && exit 1"
