--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
 	"scripts": {
 		"build": "npx tsc",
 		"build-frontend": "npm run --prefix ../frontend build && rm -Rf dist && mv ../frontend/dist .",
+		"start": "npm run build && node dist/index.js",
 		"dev": "concurrently \"nodemon index.js\" \"npx tsc --watch\"",
-		"start": "node dist/index.js",
 		"lint": "eslint .",
 		"format": "prettier --write .",
 		"test": "echo \"Error: no test specified\" && exit 1"
