--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"build": "npx tsc",
 		"build-frontend": "npm run --prefix ../frontend build && rm -Rf dist && mv ../frontend/dist .",
-		"start": "npm run build && node dist/index.js",
+		"start": "node dist/index.js",
 		"dev": "concurrently \"nodemon index.js\" \"npx tsc --watch\"",
 		"lint": "eslint .",
 		"format": "prettier --write .",
