--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,7 @@
 		"target": "es2016",
 		"module": "commonjs",
 		"rootDir": ".",
-		"outDir": "dist",
+		"outDir": "./dist",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
